# Timer-win

./: .gitignore  README.md  StudyFlow.spec  pyproject.toml  学习计时器-开发文档.md  学习计时器-技术文档.md
src/studyflow/: __init__.py  __main__.py  app.py  domain.py  infrastructure.py  main_window.py  timer_service.py
tests/: test_database.py  test_domain.py  test_gui.py
