[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "studyflow"
version = "0.1.0"
description = "Windows 桌面学习活动计时器"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.9", "pystray>=0.19", "Pillow>=11"]
build = ["pyinstaller>=6.11"]

[project.scripts]
studyflow = "studyflow.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
